<resources>
    <string name="all_unit_converter">Unit Converter</string>
    <string name="factor">Factor</string>
    <string name="circle">Circle</string>
    <string name="circle_interaction">Two circles intersect</string>
    <string name="circle_tangent">Two circles intersect</string>
    <string name="close">Close</string>
    <string name="collinear">Straight</string>
    <string name="column">columns</string>
    <string name="copied">Copied</string>
    <string name="create">Create</string>
    <string name="delete_desc">Erase</string>
    <string name="derivative">Derivative</string>
    <string name="error_input_num">Formatting error</string>
    <string name="error">Error</string>
    <string name="expand">Expand</string>
    <string name="factor_prime">Prime Factor</string>
    <string name="factor_polynomial">Factor Polynomial</string>
    <string name="ellipse">Ellipse</string>
    <string name="feedback">Feedback</string>
    <string name="gi_i_thi_u_v_calc">About App</string>
    <string name="gi_tr_nh_nh_t">Smallest value</string>
    <string name="graph">Graph</string>
    <string name="app_name">Allculator</string>
    <string-array name="temperature">
        <item>From</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>

    </string-array>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="modulo">%</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="RAD">RAD</string>
    <string name="DEG">DEG</string>
    <string name="parentheses_open">(</string>
    <string name="parentheses_close">)</string>
    <string name="root">"\u221A"</string>
    <string name="power">^</string>
    <string name="plus_or_minus">+/<Big>-</Big></string>
    <string name="square">X<sup><small>2</small></sup></string>
    <string name="factorial">!</string>
    <string name="inverse">1/X</string>
    <string name="e_constant">e</string>
    <string name="pi">"\u03A0"</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="sin_inverse">sin<sup><small>-1</small></sup></string>
    <string name="cos">cos</string>
    <string name="cos_inverse">cos<sup><small>-1</small></sup></string>
    <string name="tan">tan</string>
    <string name="tan_inverse">tan<sup><small>-1</small></sup></string>
    <string name="help">Help</string>
    <string name="enter_expression">Enter expression</string>
    <string name="input_equation">Enter an equation:</string>
    <string name="inside">Inside</string>
    <string name="interaction">Intersecting</string>
    <string name="l_ch_chu_n">Standard deviation</string>
    <string name="vector">vector</string>
    <string name="title_activity_app_about">About AllCulator</string>
    <string name="title_activity_geometry">2D Cartesian Geometry</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_matrix_calculator">Matrix</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_unit_converter_acitvity">Unit Converter</string>
    <string name="th_m_ph_ng_tr_nh">More</string>
    <string name="t_ng">sum</string>
    <string name="speech_not_supported">Voice recognition is not supported</string>
    <string name="speak_expression">Read expressions</string>
    <string name="solve_system_equation">Solve a system of equations</string>
    <string name="solve_for_var">Solve equations with variables (x, y, z, …): </string>
    <string name="solve_equation">Solve Equation</string>
    <string name="simplify_expression">Simplify Expression</string>
    <string name="simplify">Simplify</string>
    <string name="settings">Setting</string>
    <string name="science_calculator">Scientific Calculator</string>
    <string name="row">rows</string>
    <string name="process">Handling</string>
    <string name="polygon">polygon</string>
    <string name="parallel">Parallel</string>
    <string name="outside">Outside</string>
    <string name="auto_process">Automatic data processing</string>
    <string name="line">Straight line</string>
    <string name="matrix_op_inverse_a">Inverse A</string>
    <string name="matrix_op_inverse_b">Inverse B</string>
    <string name="matrix_op_tranpose_b">Trans B</string>
    <string name="matrix_op_tranpose_a">Trans A</string>
    <string name="maximum">The maximum value</string>
    <string name="more">More …</string>
    <string name="msg_delete_matrix">Creating a new matrix will delete the existing matrix. Are you sure?</string>
    <string name="nh_p_c_c_n_c_a_h">Enter the variables of the system of equations:</string>
    <string name="nh_p_d_li_u">Enter a value:</string>
    <string name="not_line">Not a straight line</string>
    <string name="not_interaction">No intersections</string>
    <string name="not_in_circle">None of the circle</string>
    <string name="nh_p_c_c_ph_ng_tr_nh_t_o_th_nh_h_ph">
        Enter equations to form a system of equations, then enter the equation system variables \n
        For example: press [+] and enter the following equations: \n
         x + y + z = 2 \n
         x - y + 2z = 6 \n
         z + y = 2 \n
        Then enter the variables you are looking for: x, y, z \n
        Press [SOLVE]
    </string>
    <string name="nh_p_d_li_u_c_ch_nhau_b_i_d_u_ph_y_nv_d_12_232_43_4">Data entries separated by a comma (,) \n \ For example: 12, 232.43, 4</string>
    <string name="above_circle">Located on the circle</string>
    <string name="not_input_equation">Unknown equations</string>
    <string name="noFunDisp">There is no function to display</string>
    <string name="tapFun">Choose a function</string>
    <string name="save">Save</string>
    <string name="add_function">Add function</string>
    <string name="cannotwrite">Unable to write the file</string>
    <string name="not_variable">
        <![CDATA[
        No variable found </br>
        Please enter an equation with a variable x</br>
        Examples: 2x + 1 or 2x^2 + x - 2
        ]]>
    </string>
    <string name="history">History</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_title_theme">Theme</string>
    <string name="solve">Solve</string>
    <string name="tangent">Tangent</string>
    <string name="translate">Translate</string>
    <string name="choose_mode">Select 2D or 3D graph mode</string>
    <string name="reason">Reason</string>
    <string name="math_error">Math error</string>
    <string name="add_equation">Add equation</string>
    <string name="remove_equation">Delete equation</string>
    <string name="enter_params">Enter the variables of the system of equations:</string>
    <string name="calc">Calc</string>
    <string name="enter_value">Enter value</string>
    <string name="name">Name</string>
    <string name="define_var">Define variable</string>
    <string name="graph_2">Graph</string>
    <string name="enter_limit">Enter limit</string>
    <string name="eval">Evaluate</string>
    <string name="input_limit">Input limit of function</string>
    <string name="limit">Find limit</string>
    <string name="rate_this_app">Rate app</string>
    <string name="integrate">Integrate</string>
    <string name="enter_function">Enter function</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="derivative_level">Derivative level</string>
    <string name="der_level_desc">Select derivative level here</string>
    <string name="input_der_here">Enter derivative functions needed in this line!</string>
    <string name="input_equation_here">Enter equation need find root in this line!</string>
    <string name="input_expand_here">Enter the expression to expand in this line!</string>
    <string name="input_graph_here">Click here to add more functions</string>
    <string name="input_integrate_here">Enter the function to integrate on this line!</string>
    <string name="input_primitive_here">Enter the function to primitive on this line!</string>
    <string name="primitive">Primitive</string>
    <string name="limit_from_desc">Lower limit</string>
    <string name="push_analyze_button">Press this button to determine the factorization of polynomials, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_button_primitive">Then press the button to start the calculation, the calculation may take a long time for a first-time data initialization</string>
    <string name="push_der_button">Press this button to derivative function, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_expand_button">Click this button to expand the expression, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_integrate_button">Press this button to integrals, calculation process can take longer for a first-time data initialization</string>
    <string name="push_simplify_button">Press this button to shortened expression, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_solve_button">Press this button to find root the equation, the calculation process can take longer for a first-time data initialization</string>
    <string name="input_analyze_here">Enter a polynomial to analyze in this line!</string>
    <string name="input_simplify_here">Enter the expression to simplify in this line!</string>
    <string name="limit_to_desc">Upper limit</string>
    <string name="ln_hint">
        <![CDATA[
<font color="red">Log(x) is the natural logarithm</font>
        ]]></string>
    <string name="language">Language</string>
    <string name="default_">System</string>
    <string name="combination">Combination</string>
    <string name="permutation">Permutation</string>
    <string name="module">Modulo</string>
    <string name="input_number">Enter number</string>
    <string name="enter_number">Enter number</string>
    <string name="trace_mode">Trace mode</string>
    <string name="not_a_number">The data entered is not a number!</string>
    <string name="gt_zero">Both numbers must be greater than zero.</string>
    <string name="summary_trace_mode">Display how computers solve expressions</string>
    <string name="enter_variable">Enter variables here. Variables are separated by semicolons.</string>
    <string name="select_num_var">Select the number of variables</string>
    <string name="num_of_var">Number of variables</string>
    <string name="enter_coefficient">Enter coefficient here!</string>
    <string name="select_num_var_des">Number of variables in the system of equations need finding root.</string>
    <string name="all_functions">All functions</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="factorial_calculator">Factorial Calculator</string>
    <string name="base_converter">Base Converter</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="log_calculator">Log Calculator</string>
    <string name="val_discount">Val / Discount</string>
</resources>