<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/all_functions">
            <menu>

                <item
                    android:id="@+id/nav_basic_calc"

                    android:title="@string/basic_calculator"/>
                <item
                    android:id="@+id/nav_sci_calc"

                    android:title="@string/science_calculator"/>

                <item
                    android:id="@+id/nav_base"

                    android:title="@string/base_converter"/>


                <item
                    android:id="@+id/nav_age"

                    android:title="@string/age_calculator"/>


                <item
                    android:id="@+id/nav_factor_equation"

                    android:title="@string/factorial_calculator"/>

                <item
                    android:id="@+id/nav_unit"

                    android:title="@string/all_unit_converter"/>

                <item
                    android:id="@+id/nav_combination"

                    android:title="@string/combination"/>
                <item
                    android:id="@+id/nav_permutation"

                    android:title="@string/permutation"/>


                <item
                    android:id="@+id/nav_log"

                    android:title="@string/log_calculator"/>

                <item
                    android:id="@+id/nav_val"

                    android:title="@string/val_discount"/>



            </menu>
        </item>



    </group>


</menu>

